# RayTracing-dpcpp

./: CMakeLists.txt  build.sh
3rdpart/: CMakeLists.txt
3rdpart/spdlog/tests/: utils.cpp
assets/: 辐射度量学.md
include/: BVH.h  Material.h  Model.h  Render.h  Scenes.h  Triangle.h  strtool.h  utils.h  utils_.h
src/: BVH.cpp  Model.cpp  main.cpp
